--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^2.6.5",
+    "dayjs": "^1.11.0",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.10"
+    "mockjs": "^1.1.0",
+    "vue": "^2.6.10",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
