首页优化完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "appsecret",
         "Avenir",
         "axios",
-        "mockjs"
+        "mockjs",
+        "msgbox",
+        "popconfirm",
+        "vuex"
     ]
 }
