--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "mockjs": "^1.1.0",
     "vue": "^2.6.10",
     "vue-axios": "^3.4.1",
-    "vue-router": "^3.5.3"
+    "vue-jsonp": "^2.0.0",
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
